# velos

./: Cargo.toml  README.md
client/: Cargo.toml
core/: Cargo.toml
core/src/: shred.rs
core/src/shred/: legacy.rs
gossip/: .env.example  Cargo.toml
gossip/overview/: Solana Gossip Overview.md
gossip/src/: connection.rs  contact_info.rs  data.rs  deprecated.rs  duplicate_shred.rs  filter.rs  legacy_contact_info.rs  lib.rs  ping_pong.rs  process_message.rs  protocol.rs  pull_message.rs  restart_table_value.rs  table.rs
shred/: Cargo.toml
shred/src/: lib.rs
shred/src/shred/: legacy.rs  merkle.rs  mod.rs  shred.rs  shred_code.rs
src/: main.rs  shred.rs
src/shred/: layout.rs  merkle.rs  shred_data.rs  verify_shred.rs
