[package]
name = "velos"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ 
    "gossip", "shred", 
]



[workspace.dependencies]
solana-sdk = "2.1.0"
bitflags = "2.6.0"
num_enum = "0.7.3"
thiserror = "1.0.64"
serde = "1.0.210"
indexmap = "2.6.0"
lru = "0.12.5"
bincode = "1.3.3"
solana-version = "2.0.13"
bv = "0.11.1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "net", "time"] }
rand = "0.8.5"
solana-bloom = "2.1.0"
dotenv = "0.15.0"
hexis-shred =  { path = "./shred" }



