[package]
name = "hexis-gossip"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = { workspace = true }
solana-sdk = { workspace = true }
lru = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
solana-version = { workspace = true}
bv = { workspace = true }
hexis-shred = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
solana-bloom = {workspace = true }
thiserror = { workspace = true }
dotenv = { workspace = true }
